--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>		
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.8.4</version>
+			<version>1.9.5</version>
+			<scope>test</scope>
 		</dependency>
+			
 	</dependencies>
 </project>
